--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@adonisjs/core": "~5.0.4-preview-rc",
     "@adonisjs/lucid": "^10.0.0",
     "@adonisjs/repl": "^1.0.0",
+    "keygen": "^0.3.1",
     "luxon": "^1.26.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
