Tested and done with ticketing system

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "luxon": "^1.26.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "phc-argon2": "^1.1.0",
     "proxy-addr": "^2.0.6",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19"
