--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,9 @@ HOST=
 NODE_ENV=
 APP_KEY=
 DB_CONNECTION=
+REDIS_CONNECTION=
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
 MYSQL_HOST=
 MYSQL_PORT=
-MYSQL_USER=
-MYSQL_PASSWORD=
-MYSQL_DB_NAME=
