--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -21,7 +21,10 @@
     "./providers/AppProvider",
     "@adonisjs/core",
     "@adonisjs/lucid",
-    "@adonisjs/auth"
+    "@adonisjs/auth",
+    "@mezielabs/adonis-stripe",
+    "@kaperskyguru/adonis-cache",
+    "@adonisjs/redis"
   ],
   "aceProviders": [
     "@adonisjs/repl"
