--- a/package.json
+++ b/package.json
@@ -24,9 +24,15 @@
   },
   "dependencies": {
     "@adonisjs/auth": "^5.1.1",
-    "@adonisjs/core": "~5.0.4-preview-rc",
+    "@adonisjs/core": "^5.1.6",
     "@adonisjs/lucid": "^10.0.0",
-    "@adonisjs/repl": "^1.0.0",
+    "@adonisjs/redis": "^7.0.2",
+    "@adonisjs/repl": "^1.1.6",
+    "@kaperskyguru/adonis-cache": "^2.0.10",
+    "@mezielabs/adonis-stripe": "^1.0.4",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.0.0",
+    "kap-adonis-cache": "^2.0.6",
     "keygen": "^0.3.1",
     "luxon": "^1.26.0",
     "mysql": "^2.18.1",
