--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,10 @@
       "@adonisjs/core",
       "@adonisjs/repl",
       "@adonisjs/lucid",
-      "@adonisjs/auth"
+      "@adonisjs/auth",
+      "@mezielabs/adonis-stripe",
+      "@kaperskyguru/adonis-cache",
+      "@adonisjs/redis"
     ]
   }
 }
